addingf content .js file

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "YT Book",
+  "name": "YouTube Book",
   "version": "0.1.0",
-  "description": "Saving timestamps in YT videos",
+  "description": "Saving timestamps for YT videos",
   "permissions": ["storage", "tabs"],
   "host_permissions": ["https://*.youtube.com/*"],
   "background": {
@@ -30,7 +30,7 @@
       "24": "assets/logo.png",
       "32": "assets/logo.png"
     },
-    "default_title": "My YT Bookmarks",
+    "default_title": "YouTube Book",
     "default_popup": "popup.html"
   },
   "manifest_version": 3
