--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "YouTube Book",
   "version": "0.1.0",
   "description": "Saving timestamps for YT videos",
-  "permissions": ["storage", "tabs"],
+  "permissions": ["storage", "tabs", "activeTab"],
   "host_permissions": ["https://*.youtube.com/*"],
   "background": {
     "service_worker": "background.js"
