chanegs to save and edit button

--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,9 @@
         "assets/bookmark.png",
         "assets/play.png",
         "assets/delete.png",
-        "assets/save.png"
+        "assets/save.png",
+        "assets/edit.png",
+        "assets/cancel.png"
       ],
       "matches": ["https://*.youtube.com/*"]
     }
